[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/actors/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="iframeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="iframes_end" from="." to="." method="_on_Hurtbox_iframes_end"]
[connection signal="iframes_start" from="." to="." method="_on_Hurtbox_iframes_start"]
[connection signal="timeout" from="iframeTimer" to="." method="_on_iframeTimer_timeout"]
